# webinar-18-02-2026

./: CLAUDE.md  PROJECT_DESCRIPTION.md  README.md  pyproject.toml
.github/workflows/: ai-review.yml  ci.yml
doc/sprint-1-core/: DETAIL.md  OVERVIEW.md
doc/sprint-1-core/task-01-project-structure/: DETAIL.md  OVERVIEW.md
doc/sprint-1-core/task-02-symbol-generator/: DETAIL.md  OVERVIEW.md
doc/sprint-1-core/task-03-rich-renderer/: DETAIL.md  OVERVIEW.md
doc/sprint-1-core/task-04-input-handler/: DETAIL.md  OVERVIEW.md
doc/sprint-1-core/task-05-game-runner/: DETAIL.md  OVERVIEW.md
doc/sprint-2-ux/: DETAIL.md  OVERVIEW.md
doc/sprint-2-ux/task-06-main-menu/: DETAIL.md  OVERVIEW.md
doc/sprint-2-ux/task-07-restart-exit/: DETAIL.md  OVERVIEW.md
doc/sprint-2-ux/task-08-input-error/: DETAIL.md  OVERVIEW.md
doc/sprint-3-animations/: DETAIL.md  OVERVIEW.md
doc/sprint-3-animations/task-09-place-effect/: DETAIL.md  OVERVIEW.md
doc/sprint-3-animations/task-10-highlight/: DETAIL.md  OVERVIEW.md
doc/sprint-3-animations/task-11-rotation-sprites/: DETAIL.md  OVERVIEW.md
doc/sprint-3-animations/task-12-physics/: DETAIL.md  OVERVIEW.md
doc/sprint-3-animations/task-13-falling-symbols/: DETAIL.md  OVERVIEW.md
doc/sprint-3-animations/task-14-draw-effect/: DETAIL.md  OVERVIEW.md
doc/sprint-3-animations/task-15-result-banner/: DETAIL.md  OVERVIEW.md
doc/sprint-4-quality/: DETAIL.md  OVERVIEW.md
src/tictactoe_cli/: __init__.py  __main__.py  app.py
tests/: conftest.py  test_input.py  test_renderer.py  test_smoke.py  test_symbols.py
(+13 files in other folders)
