[project]
name = "tictactoe-cli"
version = "0.1.0"
description = "Console Tic-Tac-Toe game with Rich visualization and cinematic animations"
requires-python = ">=3.14"
dependencies = [
    "tic-tac-toe-3x3>=1.1.0",
    "rich>=13.0.0",
]

[project.scripts]
tictactoe-cli = "tictactoe_cli.app:main"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.mypy]
strict = true
mypy_path = "src"
packages = ["tictactoe_cli"]

[[tool.mypy.overrides]]
module = "tic_tac_toe_3x3.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tictactoe_cli"]
